<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="co.devpartners.devhub.ui.SpaceTypeActivity">


    <RelativeLayout
        android:id="@+id/openSpace"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:src="@drawable/openarms" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_toEndOf="@+id/imageView2"
            android:text="@string/openspace_title"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/privateSpace"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_border"
        app:layout_constraintEnd_toEndOf="@+id/openSpace"
        app:layout_constraintStart_toStartOf="@+id/openSpace"
        app:layout_constraintTop_toBottomOf="@+id/openSpace">

        <ImageView
            android:id="@+id/privateLogo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:src="@drawable/pornwatcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_toEndOf="@+id/privateLogo"
            android:text="@string/privatespace_title"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/conferenceSpace"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_border"
        app:layout_constraintEnd_toEndOf="@+id/openSpace"
        app:layout_constraintStart_toStartOf="@+id/openSpace"
        app:layout_constraintTop_toBottomOf="@+id/privateSpace">

        <ImageView
            android:id="@+id/conferenceLogo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:src="@drawable/grouppornwatching" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_toEndOf="@+id/conferenceLogo"
            android:text="@string/conference_title"
            android:textSize="14sp"
            android:textStyle="bold"
            />
    </RelativeLayout>


    <Button
        android:id="@+id/nextButton"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:background="@color/colorEditText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/openSpace"
        app:layout_constraintStart_toStartOf="@id/openSpace"
        app:layout_constraintTop_toBottomOf="@id/conferenceSpace"
        android:text="NEXT"
        android:textColor="@android:color/black"
        />

</android.support.constraint.ConstraintLayout>
